--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ a:hover {
 }
 
 #home-menu ul {
-    background-color: white;
+    background-color: rgb(194, 184, 197);
     border-radius: 5px;
     list-style: none;
     padding: 30px;
@@ -289,11 +289,11 @@ a:hover {
     width: 50%;
     padding: 0;
     margin: 20px 0 20px 8%;
-    border-bottom: 1px solid slategray;
+    border-bottom: 1px solid rgb(34, 2, 46);
 }
 .dish {
     float: left;
-    color: #555;
+    color: #360449;
     font-weight: bold;
     position: relative;
     z-index: 1;
@@ -303,7 +303,7 @@ a:hover {
 
 .Price {
     float: right;
-    color: #555;
+    color: #530707;
     font-weight: bold;
     position: relative;
     background-color: transparent;
@@ -313,7 +313,7 @@ a:hover {
 .Description {
     clear: both;
     display: block;
-    color: #999;
+    color: #28015a;
     font-style: italic;
     font-size: 14px;
     padding-top: 10px;
