--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ body {
     top: 0;
     display: inline-block;
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.541);
 }
 
 .navBar a {
@@ -136,7 +135,7 @@ a:hover {
     position: relative;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
-    color: white;
+    color: rgb(80, 22, 77);
 
 
 }
@@ -207,7 +206,7 @@ a:hover {
 
     #hamMenu {
         visibility: visible;
-        color: white;
+        color: rgb(24, 13, 65);
         font-size: 25px;    
         z-index: -1;
     }
@@ -327,5 +326,4 @@ a:hover {
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 4px rgb(255, 255, 255), 0.3em 0.3em 4em rgba(0, 0, 0, 0.3);
 }
 
-/*  image animation for resturant*/
 
