--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
-    background-color: wheat;
+    background-color: rgb(28, 22, 56);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 @keyframes windowsFly {
