--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ a:hover {
     visibility: hidden;
 }
 
-/*  grid system for the webpage */
+
 
 .header {
     width: 80%;
@@ -119,7 +119,7 @@ a:hover {
 
 }
 
-/* for image seperation */
+
 
 
 .story {
@@ -327,3 +327,65 @@ a:hover {
 }
 
 
+.reviews {
+    padding: 30px;
+    background-color: #29293a;
+    box-shadow: rgb(255, 10, 194) 0px 20px 30px -10px;
+}
+
+.review {
+    background-color: rgb(81, 51, 82);
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    box-shadow: rgb(255, 10, 194) 0px 20px 30px -10px;
+}
+
+.review-text {
+    font-size: 18px;
+    margin-bottom: 10px;
+    
+}
+
+.review-author {
+    font-size: 14px;
+    color: #230127;
+}
+
+#review-form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgb(255, 10, 194) 0px 20px 30px -10px;
+    
+}
+
+#review-text,
+#review-author {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #210b9c;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+#review-text {
+    resize: vertical;
+    height: 120px;
+}
+
+button[type="submit"] {
+    background-color: #aa59ca;
+    color: rgb(237, 236, 238);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+    box-shadow: rgb(255, 10, 194) 0px 20px 30px -10px;
+}
+
+button[type="submit"]:hover {
+    background-color: #f812c6;
+}
